Issue 13284: Projects web part forces Basic Auth login Issue 13283: Strange layout in projects web part Issue 13278: Add more guidance on Users/Permission page Issue 13277: **Module enabled state lost on error reshow during project/folder creation Issue 13276: Portal module disappears from default tab drop-down when another module is added Issue 13270: Project webpart: long project names cause misalignment Issue 13253: **Clicking through "create project" screen without entering name causes you to lose the custom choices you've made

--- a/internal/webapp/extWidgets/IconPanel.css
+++ b/internal/webapp/extWidgets/IconPanel.css
@@ -1,34 +1,11 @@
-
-.labkey-iconpanel div.thumb-large{
-	width: 100px;
-}
-.labkey-iconpanel div.thumb-medium{
-	width: 80px;
-}
-
-.labkey-iconpanel img.thumb-large{
-	height: 60px;
-	width: 60px;
-}
-
-.labkey-iconpanel img.thumb-medium{
-	height: 40px;
-	width: 40px;
-}
-
-.labkey-iconpanel img.thumb-small{
-	height: 20px;
-	width: 20px;
-}
-
 .labkey-iconpanel .thumb-wrap{
 	padding: 5px;
     text-align: center;
+    vertical-align:text-top;
 }
 
 .labkey-iconpanel .thumb-wrap-bottom{
-	float: left;
-    display: block;
+    text-align: center;
 }
 
 .labkey-iconpanel .thumb-label-bottom{
